raw/relay/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sentry-relay
  namespace: tedy
spec:
  selector:
    app: sentry-relay
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
